[package]
name = "bistro"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["async", "concurrent"]
description = "In-process pub/sub and request/response channels"
repository = ""

[features]
async-std = ["dep:async-std"]
test = ["async-std"]

[dependencies]
async-std = { version = "1.13.0", optional = true}

[dev-dependencies]
smol = "2.0.2"
